# SCA

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
src/cats/: models.py  serializers.py  urls.py  validators.py
src/cats/migrations/: 0001_initial.py
src/missions/: models.py  serializers.py  urls.py  views.py
src/missions/migrations/: 0001_initial.py  0002_alter_target_mission.py  0003_alter_mission_cat.py
src/project/: settings.py  urls.py
